frontend/styles/events/attendees.css
#events\/attendees {
  header {
    @apply flex flex-col gap-3 sm:flex-row sm:items-center sm:justify-between;
  }

  .info {
    @apply flex flex-col;
    time, .stats {
      @apply text-lsd-gray text-xs;
    }
  }

  .table-wrapper {
    @apply overflow-x-scroll;
    scrollbar-color: theme(colors.lsd-charcoal) transparent;
  }

  table.attendees {
    @apply text-xs whitespace-nowrap ml-auto mr-auto;
    border-spacing: 1rem 0;
    border-collapse: separate;
  }

  th {
    @apply underline;
  }

  th.sortable {
    @apply cursor-pointer select-none;
  }

  th:first-child,
  td:first-child {
    @apply pl-0;
  }

  th:last-child,
  td:last-child {
    @apply pr-0;
  }

  td.note {
    @apply whitespace-normal max-w-[150px];
  }

  td.checkin time,
  td.checkin button {
    @apply align-middle;
  }

  td.checkin time {
    @apply mr-2;
  }

  td.actions button {
    @apply cursor-pointer;
  }

  .actions {
    @apply flex gap-4 text-xs;
    a {
      @apply flex items-center gap-2;
    }
  }
}

